--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lucide-react": "^0.556.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^7.10.1"
+        "react-router-dom": "^7.10.1",
+        "recharts": "^3.5.1"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.2.1",
